--- a/lab/css/style.css
+++ b/lab/css/style.css
@@ -13,10 +13,20 @@ body {
 .map {
     background-color: #eee;
     position: absolute;
-    left: 400px;
-    right: 0;
+    left: 0px;
+    right: 400px;
     bottom: 0;
     top: 0;
+}
+
+.header {
+    position: absolute;
+    top:0;
+    left:0;
+    right:0;
+    background-color: black;
+    height: 20px;
+    color:white;
 }
 
 .sidebar {
@@ -24,7 +34,8 @@ body {
                          a lot of content in it */
     background-color: #ccc;
     position: absolute;
-    left: 0;
+    left:0;
+    right: 0;
     width: 400px;
     bottom: 0;
     top: 0;
